tests/samples/valid/pointer_aliasing.pn
fn main() -> i32
{
	var i: i32 = 0;
	var x: &i32 = &i;
	i = 200;
	return: x
}
